--- a/coronatest/index.html
+++ b/coronatest/index.html
@@ -30,10 +30,10 @@
 <div id='map'></div>
 
 <script>
-	var person = L.layerGroup();
+	var person3 = L.layerGroup();
 
-	L.marker([37.460353, 126.440653]).bindPopup('인천국제공항 Inchon Airport').addTo(person),
-	L.marker([37.642295, 126.831124]).bindPopup('일산명지병원 Ilsan Myeong-ji Hospital').addTo(person),
+	L.marker([37.460353, 126.440653]).bindPopup('인천국제공항 Inchon Airport').addTo(person3),
+	L.marker([37.642295, 126.831124]).bindPopup('일산명지병원 Ilsan Myeong-ji Hospital').addTo(person3);
 
 
 	var mbAttr = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
@@ -47,7 +47,7 @@
 	var map = L.map('map', {
 		center: [37.460353, 126.440653],
 		zoom: 10,
-		layers: [grayscale, person]
+		layers: [grayscale, person3]
 	});
 
 	var baseLayers = {
@@ -56,7 +56,7 @@
 	};
 
 	var overlays = {
-		"세번째 3th": person
+		"세번째 3th": person3
 	};
 
 	
