--- a/coronatest/index.html
+++ b/coronatest/index.html
@@ -32,8 +32,8 @@
 <script>
 	var person3 = L.layerGroup();
 
-	L.circle([37.460353, 126.440653], {color: 'yellow', fillColor: '#f03', fillOpacity: 0.5, radius: 700}).bindPopup('인천국제공항 Inchon Airport').addTo(person3),
-	L.marker([37.642295, 126.831124]).bindPopup('일산명지병원 Ilsan Myeong-ji Hospital').addTo(person3);
+	L.circle([37.460353, 126.440653], {color: 'yellow', fillColor: '#f03', fillOpacity: 0.9, radius: 700}).bindPopup('인천국제공항 Inchon Airport').addTo(person3),
+	L.circle([37.642295, 126.831124], {color: 'yellow', fillColor: '#ffa500', fillOpacity: 0.9, radius: 700}).bindPopup('일산명지병원 Ilsan Myeong-ji Hospital').addTo(person3);
 
 
 	var mbAttr = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
