--- a/coronatest/index.html
+++ b/coronatest/index.html
@@ -49,7 +49,7 @@
 	var map = L.map('map', {
 		center: [37.460353, 126.140653],
 		zoom: 10,
-		layers: [grayscale, person3]
+		layers: [grayscale, person1, person3]
 	});
 
 	var baseLayers = {
