--- a/coronago/index.html
+++ b/coronago/index.html
@@ -1,72 +1,38 @@
-  
 <html>
-
 <head>
-		<!--STEP 1: CSS 추가하기 -->
-		<!--CDN 방식 -->
-		<!--<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"/>-->
-		<!-- Download 방식 -->
-		<link rel="stylesheet" href="css/leaflet@1.3.3/leaflet.css"/>
-		<!--STEP 3: 지도 영역 관련 CSS 추가하기 -->
-		<link rel="stylesheet" href="css/main.css"/>
-		<!--STEP 2: JS 추가하기 -->
-		<!--CDN 방식 -->
-		<!--<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"></script>-->
-		<!-- Download 방식 -->
-		<script src="js/leaflet@1.3.3/leaflet.js"></script>
+	<title>Layers Control Tutorial - Leaflet</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
+
+
+	<style>
+		html, body {
+			height: 100%;
+			margin: 0;
+		}
+		#map {
+			width: 800px;
+			height: 600px;
+		}
+	</style>
 </head>
-
 <body>
-	<!-- 배경지도 영역 추가하기-->
-	<div id="map" class="map"></div>
-	<script>
-		
-		var lat = 37.350127; //위도
-		var lng = 127.008092; //경도
-		var zoom = 10; //줌 레벨
-		
-		
-		var map = L.map('map', {
-			center: [lat, lng],
-			zoom: zoom
-		});
-		
-		//L.tileLayer('http://xdworld.vworld.kr:8080/2d/Base/service/{z}/{x}/{y}.png').addTo(mymap); //브이월드 지도
-		//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap); //OSM
-		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors' //화면 오른쪽 하단 attributors
-		}).addTo(map);
-		
-	        // Creating a Layer object
-		var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-		
-		// Adding layer to the map
-		map.addLayer(layer);
 
-		var circle = L.circle([37.460353, 126.440653], {
-		    color: 'yellow',
-		    fillColor: '#f03',
-		    fillOpacity: 0.5,
-		    radius: 700
-		}).addTo(map).bindPopup('첫번째 확진자 1st confirmed  <br> 격리 isolated.')
-		
-		var circle = L.circle([37.460353, 126.440553], {
-		    color: 'yellow',
-		    fillColor: '#f03',
-		    fillOpacity: 0.5,
-		    radius: 700
-		}).addTo(map).bindPopup('첫번째 확진자 1st confirmed  <br> 격리 isolated.')
-		//.openPopup();
-		
-		
-	var cities = L.layerGroup();
+<div id='map'></div>
 
-	L.marker([37.460353, 126.340653]).bindPopup('This is Littleton, CO.').addTo(cities),
-	L.marker([37.460353, 126.240653]).bindPopup('This is Denver, CO.').addTo(cities),
-	L.marker([37.460353, 126.140653]).bindPopup('This is Aurora, CO.').addTo(cities),
-	L.marker([37.460353, 126.040653]).bindPopup('This is Golden, CO.').addTo(cities);
+<script>
+	var person1 = L.layerGroup();
+	L.circle([37.460353, 126.440653], {color: 'yellow', fillColor: '#33ff00', fillOpacity: 0.2, radius: 700}).bindPopup('인천국제공항 Inchon Airport').addTo(person1),
+	L.circle([37.484477, 126.668995], {color: 'yellow', fillColor: '#33ff00', fillOpacity: 0.15, radius: 700}).bindPopup('인천시 의료원 Inchon-si Hospital').addTo(person1);
 
+	var person3 = L.layerGroup();
+	L.circle([37.460353, 126.440653], {color: 'yellow', fillColor: '#ffa500', fillOpacity: 0.2, radius: 700}).bindPopup('인천국제공항 Inchon Airport').addTo(person3),
+	L.circle([37.642295, 126.831124], {color: 'yellow', fillColor: '#ffa500', fillOpacity: 0.15, radius: 700}).bindPopup('일산명지병원 Ilsan Myeong-ji Hospital').addTo(person3);
 
 	var mbAttr = 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
 			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
@@ -77,9 +43,9 @@
 		streets  = L.tileLayer(mbUrl, {id: 'mapbox/streets-v11',   attribution: mbAttr});
 
 	var map = L.map('map', {
-		center: [37.460353, 126.440653],
+		center: [37.560353, 127.740653],
 		zoom: 10,
-		layers: [grayscale, cities]
+		layers: [streets, person1, person3]
 	});
 
 	var baseLayers = {
@@ -88,13 +54,13 @@
 	};
 
 	var overlays = {
-		"Cities": cities
+		"첫번째 1st": person1,
+		"세번째 3th": person3
 	};
 
+	
 	L.control.layers(baseLayers, overlays).addTo(map);
-		
-	</script>
+
+</script>
 </body>
-
-
 </html>
